fix cropped and resized images for events page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,9 +50,7 @@ h1{
   box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-}
+
 
 body {
   color: #444;
@@ -190,6 +188,19 @@ body {
     box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
   }
 }
+
+
+/*events page */
+.events-images{
+    height:300px;
+    width:300px;
+}
+
+    
+
+
+
+
 /* Form page */
 #contact-bg-image {
     width: 100%;
